[package]
name = "samskara-core"
version = "0.1.0"
edition = "2024"

[dependencies]
criome-cozo = { path = "../criome-cozo" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1"
zstd = "0.13"
base64 = "0.22"
chrono = "0.4"
tracing = "0.1"
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
